2015-02-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/css-mode.el (scss-smie--not-interpolation-p): Vars can be
	hyphenated (bug#19263).

	* textmodes/css-mode.el (css-fill-paragraph): Fix filling in presence
	of variable interpolation (bug#19751).

2015-02-05  Era Eriksson  <era+emacs@iki.fi>

	* json.el (json-end-of-file): New error (bug#19768).
	(json-pop, json-read): Use it.

2015-02-05  Kelly Dean <kelly@prtime.org>

	* help-mode.el (help-xref-interned): Pass BUFFER and FRAME to
	`describe-variable'.

	* help-fns.el (describe-function-or-variable): New function.

	* help.el (help-map): Bind `describe-function-or-variable' to o.
	(help-for-help-internal): Document o key.

2015-02-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eieio-compat.el (eieio--defmethod): Use new
	special (:documentation ...) feature.
	* emacs-lisp/eieio-core.el (eieio-make-class-predicate)
	(eieio-make-child-predicate): Same.
	(eieio-copy-parents-into-subclass): Remove unused arg.
	(eieio-defclass-internal): Adjust call accordingly and remove redundant
	`pname' var.
	(eieio--slot-name-index): Remove unused arg `obj' and adjust all
	callers accordingly.

	* emacs-lisp/cconv.el (cconv--convert-function):
	Add `docstring' argument.
	(cconv-convert): Use it to handle the new (:documentation ...) form.
	(cconv-analyze-form): Handle the new (:documentation ...) form.

	* emacs-lisp/bytecomp.el:
	(byte-compile-initial-macro-environment): Use macroexp-progn.
	(byte-compile-cl-warn): Don't silence use of cl-macroexpand-all.
	(byte-compile-file-form-defvar-function): Rename from
	byte-compile-file-form-define-abbrev-table.
	(defvaralias, byte-compile-file-form-custom-declare-variable): Use it.
	(byte-compile): Use byte-compile-top-level rather than
	byte-compile-lambda so we can compile non-values.
	(byte-compile-form): Add warnings for failed uses of lexical vars via
	quoted symbols.
	(byte-compile-unfold-bcf): Improve message for failed inlining.