@@ -1,3 +1,10 @@
+2015-02-05  Artur Malabarba  <bruce.connor.am@gmail.com>
+
+	* emacs-lisp/package.el (package--sort-by-dependence): New
+	function.  Return PACKAGE-LIST sorted by dependencies.
+	(package-menu-execute): Use it to delete packages in order.
+	(package--sort-deps-in-alist): New function.
+
 2015-02-05  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* textmodes/css-mode.el (scss-smie--not-interpolation-p): Vars can be
